# nanobot-stack

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Dockerfile  LICENSE  README.md  SECURITY.md  UPSTREAM.md  claude-review-01.md  claude-review-02.md  core_agent_lines.sh  pyproject.toml
.docs/: OBSERVABILITY_RUNBOOK.md  POLICY.md  POLICY_ADMIN_CONTRACT.md  RUN.md
.github/: dependabot.yml
.input/: fork-preview.md  req-container-isolation.md
bridge/: bridge.manifest.json  package-lock.json  package.json
bridge/src/: index.ts  protocol.test.ts  protocol.ts  server.ts  server.ts.bak  whatsapp.test.ts  whatsapp.ts  whatsapp.ts.bak
docs/plans/: 2026-03-08-agent-doctor-skill-v2.md
docs/superpowers/plans/: 2026-03-13-ops-tool.md
docs/superpowers/specs/: 2026-03-12-bridge-health-monitoring-design.md  2026-03-13-ops-tool-design.md
nanobot/: __init__.py  __main__.py
nanobot/adapters/: policy_engine.py  policy_legacy.py  reply_archive_sqlite.py  responder_legacy.py  responder_llm.py  telemetry.py  typing_channel_manager.py
nanobot/adapters/runtime/: __init__.py
nanobot/agent/: __init__.py  context.py  loop.py  subagent.py
nanobot/agent/tools/: cron.py  deep_research.py  exec_isolation.py  filesystem.py  shell.py  web.py
nanobot/api/: __init__.py  server.py
nanobot/app/: bootstrap.py
nanobot/bus/: queue.py
nanobot/channels/: base.py  feishu.py  manager.py  telegram.py  whatsapp.py  whatsapp_runtime.py
nanobot/cli/: .nanobot.code-workspace  agent_commands.py  commands.py  config_commands.py  cron_commands.py  gateway_commands.py  memory_commands.py  policy_commands.py
nanobot/config/: defaults.py  loader.py  schema.py
nanobot/core/: __init__.py  intents.py  message.py  models.py  orchestrator.py  ports.py
nanobot/media/: __init__.py  asr.py  router.py  storage.py  tts.py  vision.py
nanobot/memory/: __init__.py  embeddings.py  extractor.py  models.py  render.py  service.py  session_state.py  store.py
nanobot/memory/backends/: __init__.py  base.py  sqlite_fts.py
nanobot/pipeline/: __init__.py  dedup.py  normalize.py  outbound.py  reply_context.py  security_input.py
nanobot/policy/: __init__.py  engine.py  loader.py  middleware.py  persona.py  schema.py
nanobot/policy/admin/: contracts.py  registry.py  service.py
nanobot/providers/: factory.py  litellm_provider.py  registry.py  transcription.py
nanobot/security/: engine.py  models.py  normalize.py  rules.py
nanobot/session/: manager.py
nanobot/skills/: README.md
nanobot/skills/ideas-inbox/: SKILL.md
nanobot/storage/: __init__.py  chat_registry.py  inbound_archive.py
nanobot/telemetry/: __init__.py  base.py
nanobot/utils/: helpers.py
plans/: 2026-02-28-rename-to-yeoman-design.md  2026-02-28-rename-to-yeoman.md  commands-refactoring-plan.md  external-access-options.md  legacy-cleanup-migration-plan.md  whatsapp-message-lifecycle.md
tests/: test_caldav_service.py  test_calendar_tool.py  test_contacts_mentions.py  test_contacts_middleware.py  test_contacts_models.py  test_contacts_policy.py  test_contacts_roster.py  test_contacts_service.py  test_contacts_store.py  test_contacts_tool.py  test_core_memory_blocks.py  test_core_memory_tools.py  test_docker.sh  test_fact_check_tool.py  test_ops.py  test_session_tool_traces.py  test_subagent_memory_context.py  test_tool_validation.py  test_tracing.py
workspace/: TOOLS.md
yeoman/: __init__.py  __main__.py
yeoman/adapters/: __init__.py  policy_engine.py  reply_archive_sqlite.py  responder_llm.py  typing_channel_manager.py
yeoman/agent/: __init__.py  context.py  skills.py  subagent.py
yeoman/agent/tools/: __init__.py  browse.py  calendar.py  contacts.py  core_memory.py  cron.py  exec_isolation.py  fact_check.py  file_access.py  filesystem.py  message.py  ops.py  ops_manage.py  pi_stats.py  registry.py  send_voice.py  shell.py  spawn.py  spawn_sync.py  web.py
yeoman/api/: __init__.py  server.py
yeoman/app/: bootstrap.py
yeoman/bus/: __init__.py  events.py  queue.py
yeoman/caldav/: __init__.py  service.py  types.py
yeoman/channels/: __init__.py  base.py  discord.py  feishu.py  manager.py  telegram.py  whatsapp.py  whatsapp_runtime.py
yeoman/cli/: .nanobot.code-workspace  __init__.py  agent_commands.py  channel_commands.py  chat_commands.py  commands.py  config_commands.py  core.py  cron_commands.py  doctor_commands.py  env_commands.py  gateway_commands.py  memory_commands.py  policy_commands.py  status_commands.py
yeoman/config/: __init__.py  defaults.py  loader.py  schema.py
yeoman/contacts/: __init__.py  models.py  service.py  store.py
yeoman/core/: __init__.py  admin_commands.py  intents.py  models.py  orchestrator.py  pipeline.py  ports.py
yeoman/cron/: __init__.py  service.py  types.py
yeoman/heartbeat/: __init__.py
yeoman/media/: __init__.py  asr.py  router.py  storage.py  tts.py  vision.py
yeoman/memory/: __init__.py  core_blocks.py  embeddings.py  extractor.py  models.py  service.py  session_state.py  store.py
yeoman/pipeline/: __init__.py  access.py  admin.py  archive.py  contacts.py  dedup.py  idea_capture.py  new_chat.py  normalize.py  outbound.py  policy.py  reply_context.py  responder.py  security_input.py
yeoman/policy/: __init__.py  engine.py  identity.py  loader.py  persona.py  schema.py
yeoman/policy/admin/: __init__.py  audit.py  registry.py  service.py
yeoman/providers/: __init__.py  factory.py  litellm_provider.py  openai_compatible.py  registry.py  transcription.py
yeoman/security/: __init__.py  classifier.py  engine.py  intel_sync.md  models.py  noop.py  rules.py
yeoman/session/: __init__.py  manager.py
yeoman/skills/: README.md
yeoman/skills/agent-doctor/: SKILL.md
yeoman/skills/browser/: SKILL.md
yeoman/skills/cron/: SKILL.md
yeoman/skills/github/: SKILL.md
yeoman/skills/ops/: SKILL.md
yeoman/skills/summarize/: SKILL.md
yeoman/skills/tmux/: SKILL.md
yeoman/storage/: __init__.py  chat_registry.py  inbound_archive.py
yeoman/telemetry/: __init__.py  inmemory.py  prometheus.py  tracing.py
yeoman/utils/: __init__.py  helpers.py  process.py
(+13 files in other folders)
