[project]
name = "nanobot-stack"
version = "0.1.3.post5"
description = "Professional personal AI assistant runtime stack (fork of HKUDS/nanobot)"
requires-python = ">=3.14"
license = {text = "MIT"}
authors = [
    {name = "nanobot contributors"}
]
keywords = ["ai", "agent", "chatbot"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.14",
]

dependencies = [
    "typer>=0.23.1",
    "litellm>=1.81.12",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.0",
    "websockets>=16.0",
    "websocket-client>=1.9.0",
    "httpx[socks]>=0.28.1",
    "loguru>=0.7.3",
    "readability-lxml>=0.8.4.1",
    "rich>=14.3.2",
    "croniter>=6.0.0",
    "python-telegram-bot[socks]>=22.6",
    "lark-oapi>=1.5.3",
    "socksio>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.1",
    "mypy>=1.19.1",
]

[project.scripts]
nanobot = "nanobot.cli.commands:app"
nanobot-stack = "nanobot.cli.commands:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["nanobot"]

[tool.hatch.build.targets.wheel.sources]
"nanobot" = "nanobot"

# Include non-Python files in skills
[tool.hatch.build]
include = [
    "nanobot/**/*.py",
    "nanobot/skills/**/*.md",
    "nanobot/skills/**/*.sh",
]

[tool.hatch.build.targets.sdist]
include = [
    "nanobot/",
    "bridge/",
    "README.md",
    "LICENSE",
]

[tool.hatch.build.targets.wheel.force-include]
"bridge" = "nanobot/bridge"

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.14"
warn_unused_configs = true
ignore_missing_imports = true
disable_error_code = ["override", "union-attr", "no-any-return", "dict-item", "arg-type", "import-untyped"]

[[tool.mypy.overrides]]
module = ["nanobot.core.*", "nanobot.adapters.*", "nanobot.app.*"]
strict = true
ignore_missing_imports = false
disable_error_code = []

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
